0.3.2 (dev)
  Make code compatible with Qt5/Qt6 libs.

0.3.1 (2023/09/08)
  Added german translation (thanks to Leon Schumacher - 42LoCo42).
  Added dutch translation (thanks to Heimen Stoffels - Vistaus).
  Added turkish translation (thanks to Mehmet Akif - madanadam).
  Added russian translation (thanks to Carmina16).
  Added support for opendoas commad in octoxbps-sudo and internal terminal.
  Synched octoxbps-sudo code with lxqt-sudo version 1.3.0.
  Actions tab shows a counter feedback for inserts (with a plus signal) and 
    removals (with a minus signal) and does not steal focus anymore. 
  Changed "Sync packages" string to "Check updates".
  BugFix: openFile always left a running file manager even after program close.
  BugFix: Disable refreshing of Info and File tabs while searching for a pkg.
  BugFix: Prefer bash shell when running actions.
  BugFix: Disable Info/Files tab refresh while typing in filter/search line edit.
  BugFix: Package search did not work correctly when query string contained a "+" sign.
  BugFix: Better keyboard navigation in package list.

0.3.0 (2020/07/18)
  BugFix: Removed all xbps-install -f (force) commands.
  BugFix: Enable '*' char in the "Search/by file" option.
  BugFix: Void Linux RSS news page was outdated.
  BugFix: Files tab now shows file list of non installed packages.
  BugFix: If there's xbps inside an upgrade, it is upgraded first.
  BugFix: Enable user close OctoXBPS and notifier's upgrade window during an action.
  BugFix: Use a more complete UI lockdown method during actions.
  Faster startup time thanks to deferred retrieval of outdated packages.
  Added Project Trident support.
  Added GNOME desktop support.
  Added Lumina desktop support.
  Added new sudo tool called "octoxbps-sudo". It's based on "lxqt-sudo" code 
	(without LXQt libs) and its use is mandatory in OctoXBPS.
  Added Terminal tab to execute actions manually.
  Added new icons to UI.