@@ -273,7 +273,7 @@ void MainWindow::aboutOctoXBPSNotifier()
       QLatin1String("<b>OctoXBPS Notifier</b><br>");
   aboutText += StrConstants::getVersion() + QLatin1String(": ") + StrConstants::getApplicationVersion() + QLatin1String(" - ") + StrConstants::getQtVersion() + QLatin1String("<br>");
   aboutText += StrConstants::getURL() + QLatin1String(": ") +
-    QStringLiteral("<a href=\"https://github.com/aarnt/octoxbps/\">https://github.com/aarnt/octoxbps</a><br>");
+    QStringLiteral("<a href=\"https://tintaescura.com/projects/octoxbps/\">https://tintaescura.com/projects/octoxbps</a><br>");
   aboutText += StrConstants::getLicenses() + QLatin1String(": ") + QStringLiteral("<a href=\"http://www.gnu.org/licenses/gpl-2.0.html\">GPL v2</a><br>");
   aboutText += QStringLiteral("&copy; Alexandre Albuquerque Arnt<br><br>");
   aboutText += QStringLiteral("<b>XBPS</b><br>");
