@@ -1,5 +1,6 @@
 0.3.2 (dev)
   Make code compatible with Qt5/Qt6 libs.
+  Updated project site to tintaescura.com.
 
 0.3.1 (2023/09/08)
   Added german translation (thanks to Leon Schumacher - 42LoCo42).
